# ambedkar_chatbot

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ambedkar_chatbot/: __init__.py  chat.py  cli.py  config.py  embedding.py  ingest.py  vector_store.py
